@@ -12,6 +12,11 @@ with respect to new features and compatibility changes.
     wing rest --start
     wing rest --stop
  * Moose "around" wrappers on DBIx::Class methods are no longer executed at instanciation time. But they are executed at every other time.
+ * Added wing command to start and stop wingman.
+    wing wingman --start
+    wing wingman --restart
+    wing wingman --stop
+    wing wwingman --start --watchself
 
 2018-04-30
  * Change X-HTTP-Real-IP in nginx.conf to use $http_x_forwarded_for instead of $remote_addr to be compatible with Amazon load balancer.
